--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriLife">
         <activity
+            android:name=".LoanDetails"
+            android:exported="true" />
+        <activity
             android:name=".PaymentActivity"
             android:exported="true" />
         <activity
