--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
+<!--    <uses-permission android:name="not"-->
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -17,6 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriLife">
+        <activity
+            android:name=".LoanRepaymentActivity"
+            android:exported="true" />
         <activity
             android:name=".LoanDetails"
             android:exported="true" />
